--- a/works/cresta/cresta.html
+++ b/works/cresta/cresta.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="info wrapper1">
-      <h1>TAKUYA OKUDA</h1>
+      <a href="#"><h1>Takuya Design.</h1></a>
       <nav>
         <ul class="main-nav">
           <li><a href="#About">About</a></li>
